<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SlidesCast</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="error">There was an error we couldn\'t handle</string>
    <string name="title_slidesservice_detail">SlidesService Detail</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_cast">Cast</string>
    <string name="cant_load_file">We couldn\'t load the file</string>

    <!-- Tabs -->
    <string name="tab_home">Home</string>
    <string name="tab_my_files">Local slides</string>
    <string name="tab_slideshare">Slideshare</string>
    <string name="tab_settings">Settings</string>

    <!-- Home -->
    <string name="last_slides_used">Last slides used</string>
    <string name="cast_slides_from">Cast slides from</string>

    <!-- Local files -->


    <!-- SlideShare -->
    <string name="fragment_user_title">My slides</string>
    <string name="fragment_favorites_title">My favorites</string>
    <string name="fragment_search_title">Search slides</string>
    <string name="fragment_upload_slides_title">Upload Slides</string>
    <string name="user_credentials_error">Please enter your credentials</string>
    <string name="slideshare_connect_error">There was an error connecting to SlideShare</string>
    <string name="user_auth_error">There was an error with your credentials</string>
    <string name="go_to_param">Go to parameters</string>
    <string name="last_use">Last use :</string>
    <string name="author">Author :</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>
    <string name="check_in_param">Please check them in parameters</string>
    <string name="title_delete_dialog">Remove</string>
    <string name="message_delete_dialog">Are you sure you want to remove %s ?</string>
    <string name="title_add_favorite_dialog">Add as favorite</string>
    <string name="message_add_favorite_dialog">Are you sure you want to %s as a favorite ?</string>
    <string name="toast_added_to_favorite">%s has been added as a favorite ?</string>
    <string name="search_button">Search</string>
    <string name="pick_file">Pick a file</string>
    <string name="file_mb">Mb</string>
    <string name="no_file_picked">No file picked yet</string>
    <string name="file_doesnt_exist">File doesn\'t exist</string>
    <string name="set_title">Set the title</string>
    <string name="title">title</string>
    <string name="set_description">Set the description</string>
    <string name="description">description</string>
    <string name="make_downloadable">Make the slide downloadable</string>
    <string name="add_tag">Add tag</string>
    <string name="upload_file">Upload File</string>
    <string name="file_uploaded_successfully">File uploaded successfully</string>

    <!-- Preferences -->
    <string name="slidescast_category">Slidescast</string>

    <string name="slidescast_refresh_dialog">How often do you want to refresh ?</string>
    <string name="slidescast_refresh_summary">How often are slideshare slides and local files refreshed</string>
    <string name="slidescast_refresh_title">Automatic refresh frequency</string>
    <string name="slidescast_refresh_key">automatic_refresh</string>
    <string-array name="slidescast_refresh_entries">
        <item>Everyday</item>
        <item>Every 3 days</item>
        <item>Every 7 days</item>
        <item>Every 14 days</item>
        <item>Never</item>
    </string-array>
    <string-array name="slidescast_refresh_entries_values">
        <item>1</item>
        <item>3</item>
        <item>7</item>
        <item>14</item>
        <item>-1</item>
    </string-array>
    <string name="slidescast_refresh_default_value">3</string>

    <string name="slideshare_screen_on_title">Keep screen on</string>
    <string name="slideshare_screen_on_key">keepScreenOn</string>
    <bool name="slideshare_screen_on_default_value">true</bool>
    <string name="slideshare_screen_on_summary">Keep screen on when casting my slides</string>

    <string name="slideshare_category">SlideShare</string>

    <string name="slideshare_username_dialog">Enter your username</string>
    <string name="slideshare_username_title">Username</string>
    <string name="slideshare_username_key">username</string>
    <string name="slideshare_username_default_value"></string>
    <string name="slideshare_username_summary">Your slideshare username</string>

    <string name="slideshare_password_dialog">Enter your password</string>
    <string name="slideshare_password_title">Password</string>
    <string name="slideshare_password_key">password</string>
    <string name="slideshare_password_default_value"></string>
    <string name="slideshare_password_summary">Your slideshare password</string>


    <string name="slideshare_search_lang_dialog">Pick your SlideShare search language</string>
    <string name="slideshare_search_lang_title">Language</string>
    <string name="slideshare_search_lang_key">slideShareSearchLanguage</string>
    <string name="slideshare_search_lang_default_value">**</string>
    <string name="slideshare_search_lang_summary">Your SlideShare language</string>
    <string-array name="slideshare_search_lang_entries">
        <item>All</item>
        <item>Spanish</item>
        <item>Portuguese</item>
        <item>French</item>
        <item>Italian</item>
        <item>Dutch</item>
        <item>German</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Romanian</item>
        <item>Other</item>
    </string-array>
    <string-array name="slideshare_search_lang_entries_values">
        <item>**</item>
        <item>es</item>
        <item>pt</item>
        <item>fr</item>
        <item>it</item>
        <item>nl</item>
        <item>de</item>
        <item>zh</item>
        <item>ja</item>
        <item>ko</item>
        <item>ro</item>
        <item>!!</item>
    </string-array>
    <string name="others_category">Others</string>
    <string name="opensource_title">Open source licences</string>
    <string name="opensource_key">opensource_key</string>
    <string name="opensource_summary">List of all open source licences used in the app</string>
    <string name="rate_title">Rate SlidesCast</string>
    <string name="rate_key">rate_key</string>
    <string name="rate_summary">Please rate this app to support it</string>

    <!-- Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>

    <!-- Cast activity -->
    <string name="cast_html_page">
<![CDATA[
        <html>
		  <head>
			<style type=\"text/css\">
				  body {
					margin:0;
					padding:0;
				  }
		    </style>    
		    <title>%1$s</title>
		    <script>
		    var castType;
	  		var castUrl;		   
			function sendMessage(messageName, message){
				var payload = messageName;
				if (message){
					  payload = payload + \'_\' + message;
				}
				document.getElementById(\"slidesViewer\").contentWindow.postMessage(payload,\'*\');
		  	}  
		  	function startCast(url, type){
				castType = type;
				castUrl = url;
				page = 0;
				console.log(\"castType : \"+ castType+\";castUrl :\"+castUrl);				
				document.getElementById(\"slidesViewer\").src=castUrl;
			 };
			 function first(){
				page--;
				if (castType == \'SLIDESHARE\' || castType == \'LOCALFILE\'){
					sendMessage(\'first\');
				}
			 };
			 function left(){
				page--;
				if (castType == \'SLIDESHARE\' || castType == \'LOCALFILE\'){
					sendMessage(\'previous\');
				}
			};
			function right(){
				page++;	
				if (castType == \'SLIDESHARE\' || castType == \'LOCALFILE\'){
					sendMessage(\'next\');
				}						
			};
			function last(){
				page--;
				if (castType == \'SLIDESHARE\' || castType == \'LOCALFILE\'){
					sendMessage(\'last\');
				}
			};
			function jumpTo(slideNumber){
				page--;
				if (castType == \'SLIDESHARE\' || castType == \'LOCALFILE\'){
					sendMessagesendMessagesendMessage(\'jumpTo\', index);
				}
			};
		    </script>	
		  </head>
		  <body onload=\"startCast(\'%2$s\',\'%3$s\');\">
		  	<iframe id=\"slidesViewer\" src=\"\" height=\"100%%\" width=\"100%%\" frameborder=\"0\"/>    		   				 
		  </body>
		</html>
		]]>
    </string>

</resources>